[project]
name = "rideshare"
version = "0.1.0"
description = ""
authors = [
    {name = "Gayathri Anil"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = "^3.12.0"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
