[project]
name = "mohito"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = "^3.12.0"
dependencies = [
    "termcolor (>=2.5.0,<3.0.0)",
    "neptune (>=1.13.0,<2.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torch-geometric (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
